Fix KMS textured video leaks (bug #33193).

v2: Fix radeon_legacy_free_memory() argument type error pointed out by
Marton Balint, refactor video memory freeing logic into helper function.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=33193 .